--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-md-3 text-start ms-2">
-                            <div class="widget subscribe no-box ps-0">
+                    <div class="row justify-content-end">
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="widget subscribe no-box px-0 text-end">
                                 <span><i class="fa-brands fa-facebook fs-3 icon"></i></span>
                                 <span><i class="fa-brands fa-instagram fs-3 icon px-2"></i></span>
                                 <span><i class="fa-brands fa-linkedin fs-3 icon px-2"></i></i></span>
